--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a href="">Linkedin</a></li>
     <li><span>•</span></li>
-    <li><a href="https://github.com/zapgamer7">Github</a></li>
+    <li><a href="https://github.com/zapgamer7/angular-blog">Github</a></li>
     <li><span>•</span></li>
     <li><a href="https://www.youtube.com/channel/UC4ARjRAw3zmCIMycSWlEYow">Youtube</a></li>
   </ul>
