components dinamycs propertys

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,14 +1,15 @@
 <div class="container__big-card">
   <div class="big-card__img">
-    <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/AD72115B9CDAE873B2234BD0908CEF7B45A2D9AD9C66C699239B46E582F70A8B/scale?width=1200&aspectRatio=1.78&format=jpeg" alt="image"   height="200px">
+    <img src=" {{ cardImg }} " alt="image"   height="200px">
   </div>
   <div class="big-card__title">
-    <h1><a href="*"> Saiu a nova versão do Angular </a> </h1>
+    <h1><a href="*">
+      {{ cardTitle }}
+    </a> </h1>
   </div>
   <div class="big-card__description">
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempus augue at tempus sollicitudin. Duis vitae purus quis ex facilisis lacinia. Phasellus pellentesque est sit amet purus dictum cursus. Donec lectus ante, rutrum nec velit ut, dapibus laoreet sem. Fusce id pharetra purus.
-      Phasellus lacinia pulvinar enim a pharetra. Vivamus quis mollis purus,
-      eget ullamcorper ipsum. Nullam dolor justo,venenatis id
-      pellentesque ultrices, malesuada eu risus</p>
+    <p>
+      {{ cardDescription }}
+    </p>
   </div>
 </div>
