--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -3,11 +3,11 @@
   <div class="container__small-card-content">
 
     <div class="small-card__img">
-      <img src="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg" height="200px">
+      <img src="{{ cardImg }}" height="200px">
     </div>
 
     <div class="small-card__title">
-      <h1><a href="*"> Saiu a nova versão do Angular </a> </h1>
+      <h1><a href="*"> {{cardTitle}} </a> </h1>
     </div>
 
   </div>
