--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,12 +7,25 @@
 <div class="container__articles">
 
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card cardImg="https://lumiere-a.akamaihd.net/v1/images/iron_man_marvel_d9ce0209.jpeg?region=36,0,713,399"
+    cardTitle="homem de ferro nos cinemas"
+    cardDescription="dia 22/03/2024"
+
+    ></app-big-card>
   </div>
 
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+    cardTitle="Nova serie anunciada na disney plus"
+    cardImg="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+    ></app-small-card>
+    <app-small-card
+    cardTitle="Nova serie anunciada na disney plus"
+    cardImg="https://i0.wp.com/metagalaxia.com.br/wp-content/uploads/2022/11/pantera-negra-1.webp?fit=1920%2C1080&ssl=1"
+    ></app-small-card>
+    <app-small-card
+    cardTitle="Nova serie anunciada na disney plus"
+    cardImg="https://lumiere-a.akamaihd.net/v1/images/iron_man_marvel_d9ce0209.jpeg?region=36,0,713,399"
+    ></app-small-card>
   </div>
 </div>
